# gdc_v3_proxy

./: Cargo.toml  Dockerfile  readme.md
src/: config.rs  custom_headers.rs  error.rs  main.rs
src/api/: query_request.rs  query_response.rs
src/routes/: get_capabilities.rs  get_health.rs  get_schema.rs  post_explain.rs  post_query.rs  post_raw.rs
