[package]
name = "gdc_v3_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["headers", "matched-path", "json"] }
axum-extra = "0.7.4"
axum-macros = "0.3.7"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
indexmap = { version = "2.0.0", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
schemars = "0.8.12"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_with = "3.0.0"
ndc-client = { git = "https://github.com/hasura/ndc-spec.git" }
clap = { version = "4.3.19", features = ["derive", "env"] }
